--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,10 @@
 
 [metadata]
 name = email_forwarding_checker
-description = Add a short description here!
+description = Checks if a configured email forwarding is working
 author = verybadsoldier
 author_email = vbs@springrts.de
-license = MIT
+license = GPLv3
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
@@ -54,30 +54,11 @@ install_requires =
 
 [options.packages.find]
 where = src
-exclude =
-    tests
 
-[options.extras_require]
-# Add here additional requirements for extra features, to install with:
-# `pip install email_forwarding_checker[PDF]` like:
-# PDF = ReportLab; RXP
-
-# Add here test requirements (semicolon/line-separated)
-testing =
-    setuptools
-    pytest
-    pytest-cov
 
 [options.entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = email_forwarding_checker.module:function
-# For example:
-# console_scripts =
-#     fibonacci = email_forwarding_checker.skeleton:run
-# And any other entry points, for example:
-# pyscaffold.cli =
-#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+    console_scripts =
+        email_forwarding_checker = email_forwarding_checker:run
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
@@ -93,10 +74,6 @@ norecursedirs =
     build
     .tox
 testpaths = tests
-# Use pytest markers to select/deselect specific tests
-# markers =
-#     slow: mark tests as slow (deselect with '-m "not slow"')
-#     system: mark end-to-end system tests
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
