add daemon mode

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 url = https://github.com/pyscaffold/pyscaffold/
+
 # Add here related links, for example:
 project_urls =
     Documentation = https://pyscaffold.org/
@@ -49,7 +50,9 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    pyyaml
+    paho-mqtt==1.*
+    pyyaml==6.*
+    schedule==1.*
 
 
 [options.packages.find]
@@ -58,28 +61,7 @@ where = src
 
 [options.entry_points]
     console_scripts =
-        email_forwarding_checker = email_forwarding_checker:run
-
-[tool:pytest]
-# Specify command line options as you would do when invoking pytest directly.
-# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
-# in order to write a coverage file that can be read by Jenkins.
-# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
-#          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov email_forwarding_checker --cov-report term-missing
-    --verbose
-norecursedirs =
-    dist
-    build
-    .tox
-testpaths = tests
-
-[devpi:upload]
-# Options for the devpi: PyPI server and packaging tool
-# VCS export must be deactivated since we are using setuptools-scm
-no_vcs = 1
-formats = bdist_wheel
+        email_forwarding_checker = email_forwarding_checker:__main__
 
 [flake8]
 # Some sane defaults for the code style checker flake8
