--- a/.github/workflows/pipy_release.yml
+++ b/.github/workflows/pipy_release.yml
@@ -18,11 +18,11 @@ jobs:
     - name: Install pypa/setuptools
       run: >-
         python -m
-        pip install wheel
-    - name: Build a binary wheel
+        pip install build
+    - name: Build a binary wheel and sdist
       run: >-
-        python setup.py sdist bdist_wheel
+        python -m build --sdist --wheel .
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        password: ${{ secrets.PYPI }}
+        password: ${{ secrets.PYPI_API_TOKEN }}
