--- a/setup.cfg
+++ b/setup.cfg
@@ -12,14 +12,14 @@ license = GPLv3
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/verybadsoldier/email_forwarding_checker
 
 # Add here related links, for example:
 project_urls =
     Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
+    Source = https://github.com/verybadsoldier/email_forwarding_checker
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+    Tracker = https://github.com/verybadsoldier/email_forwarding_checker/issues
 #    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
 #    Download = https://pypi.org/project/PyScaffold/#files
 #    Twitter = https://twitter.com/PyScaffold
