--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,24 @@
+[project]
+name = "email-forwarding-checker"
+dynamic = ["version"]
+description = "Checks if a configured email forwarding is working"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "paho-mqtt==1.*",
+    "pyyaml==6.*",
+    "schedule==1.*",
+]
+
+[project.optional-dependencies]
+dev = [ "types-paho-mqtt" ]
+
+[project.scripts]
+cli-name = "email_forwarding_checker:__main__"
+
 [build-system]
-# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
-requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.setuptools_scm]
-# For smarter version schemes and other configuration options,
-# check out https://github.com/pypa/setuptools_scm
-version_scheme = "no-guess-dev"
-
-
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-line_length = 88
-profile = "black"
+[tool.hatch.version]
+source = "vcs"
